On recovery from an autosave file use DefaultFilter, seems to fix fdo#34805